--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Learning to code is scary yet exciting</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<title>About Me</title>
+	<link rel="stylesheet" type="text/css" href="main.css">	
 </head>
 <body>
-<p>"foo bar"</p>
-
+  <h1>About Me</h1>
+  <p>Learning has never been as much fun as when you are starting over and taking the plunge off the cliff.</p>
+  <ul>Where will I land?
+    <ul>
+      <li>Success?</li>
+      <li>Failure?</li>
+      <li>Rengeneration?</li>
+    </ul>
+    <h2>I got skills!</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>jQuery</li>
+    </ul>
+    <h3>Contact Info</h3>
+    <p>Twitter:<a href="https://twitter.com/CharityStudent">@sallyStudent,</a>
+      <p>
+      
 </body>
 </html>
