--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>About Me</h1>
   <p>Learning has never been as much fun as when you are starting over and taking the plunge off the cliff.</p>
-  <ul>Where will I land?
+  <h2>Where will I land? </h2>
     <ul>
       <li>Success?</li>
       <li>Failure?</li>
@@ -23,6 +23,7 @@
     <h3>Contact Info</h3>
     <p>Twitter:<a href="https://twitter.com/CharityStudent">@sallyStudent,</a>
       <p>
+
       
 </body>
 </html>
